add_executable(testDynamicalSystemSerialization testDynamicalSystemSerialization.cpp getDynamicalSystemsVector.cpp)
target_link_libraries(testDynamicalSystemSerialization dynamicalsystems ${Boost_LIBRARIES})

add_executable(testDynamicalSystemCloning testDynamicalSystemCloning.cpp getDynamicalSystemsVector.cpp)
target_link_libraries(testDynamicalSystemCloning dynamicalsystems ${Boost_LIBRARIES})

